--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,8 @@
             "prefix": "app",
             "schematics": {
                 "@schematics/angular:component": {
-                    "styleext": "scss"
+                    "styleext": "scss",
+                    "style": "scss"
                 }
             },
             "architect": {
@@ -26,6 +27,9 @@
                             "src/favicon.ico",
                             "src/assets"
                         ],
+                        "stylePreprocessorOptions": {
+                            "includePaths": ["src/"]
+                        },
                         "styles": [
                             "src/styles.scss"
                         ],
@@ -37,16 +41,7 @@
                                 "replace": "src/environments/environment.ts",
                                 "with": "src/environments/environment.prod.ts"
                             }],
-                            "optimization": true,
-                            "outputHashing": "all",
-                            "sourceMap": false,
-                            "extractCss": true,
-                            "namedChunks": false,
-                            "aot": true,
-                            "baseHref": "/dsmovies/",
-                            "extractLicenses": true,
-                            "vendorChunk": false,
-                            "buildOptimizer": true
+                            "baseHref": "/dsmovies/"
                         },
                         "dev": {
                             "fileReplacements": [{
