--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "ng serve --configuration=dev",
         "prod": "ng serve --configuration=production",
         "build": "ng build",
-        "build-prod": "ng build --prod",
+        "build-prod": "ng build ---prod",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
