--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,8 @@
                             "fileReplacements": [{
                                 "replace": "src/environments/environment.ts",
                                 "with": "src/environments/environment.prod.ts"
-                            }]
+                            }],
+                            "baseHref": "/dsmovies/"
                         },
                         "dev": {
                             "fileReplacements": [{
