--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,7 @@
                                 "replace": "src/environments/environment.ts",
                                 "with": "src/environments/environment.prod.ts"
                             }],
-                            "baseHref": "/dsmovies/"
+                            "baseHref": "./dsmovies/"
                         },
                         "dev": {
                             "fileReplacements": [{
@@ -54,7 +54,7 @@
                             "extractCss": true,
                             "namedChunks": false,
                             "aot": true,
-                            "baseHref": "/dsmovies/",
+                            "baseHref": "./dsmovies/",
                             "extractLicenses": true,
                             "vendorChunk": false,
                             "buildOptimizer": true
